--- a/index.html
+++ b/index.html
@@ -2,55 +2,62 @@
 <html>
   <head>
     <title>Todo App</title>
-    <link href="https://fonts.googleapis.com/css?family=Lato:300,400,700" rel="stylesheet">
-    <link rel="stylesheet" href="style.css" media="screen" charset="utf-8">
+    <link
+      href="https://fonts.googleapis.com/css?family=Lato:300,400,700"
+      rel="stylesheet"
+    />
+    <link rel="stylesheet" href="style.css" media="screen" charset="utf-8" />
   </head>
   <body class="page">
-    <div class="header">
-      <img src="./eisenhower-matrix.jpg"><a class="more-inf" href="https://goal-life.com/page/method/matrix-eisenhower">Want more details?</a>
-    </div>
-    <div class="main">
-      <p id="add-item">
+    <header class="header">
+      <img src="./eisenhower-matrix.jpg" /><a
+        class="more-inf"
+        href="https://goal-life.com/page/method/matrix-eisenhower"
+        >Want more details?</a
+      >
+    </header>
+    <main class="main">
+      <div id="add-item">
         <label for="new-task">Add Item</label>
         <div class="task-row-wrapper">
-          <input id="new-task"class="task" type="text">
+          <input id="new-task" class="task" type="text" />
           <button>Add</button>
         </div>
-      </p>
+      </div>
       <h3>Todo</h3>
       <ul id="incompleteTasks">
         <li class="list-item">
-          <input type="checkbox">
+          <input type="checkbox" />
           <label class="task">Pay Bills</label>
-          <input type="text" class="task">
+          <input type="text" class="task" />
           <button class="edit">Edit</button>
           <button class="delete">
-            <img src="./remove.svg">
+            <img src="./remove.svg" />
           </button>
         </li>
         <li class="list-item editMode">
-          <input type="checkbox">
+          <input type="checkbox" />
           <label class="task">Go Shopping</label>
-          <input type="text" value="Go Shopping" class="task">
+          <input type="text" value="Go Shopping" class="task" />
           <button class="edit">Save</button>
           <button class="delete">
-            <img src="./remove.svg">
+            <img src="./remove.svg" />
           </button>
         </li>
       </ul>
       <h3>Completed</h3>
       <ul id="completed-tasks">
         <li class="list-item">
-          <input type="checkbox" checked>
+          <input type="checkbox" checked />
           <label class="task">See the Doctor</label>
-          <input type="text" class="task">
+          <input type="text" class="task" />
           <button class="edit">Edit</button>
           <button class="delete">
-            <img src="./remove.svg">
+            <img src="./remove.svg" />
           </button>
         </li>
       </ul>
-    </div>
+    </main>
     <script src="app.js"></script>
   </body>
 </html>
