--- a/index.html
+++ b/index.html
@@ -17,21 +17,21 @@
       >
     </header>
     <main class="main">
-      <div id="add-item">
+      <div id="add-task">
         <label for="new-task">Add Item</label>
-        <div class="task-row-wrapper">
-          <input id="new-task" class="task" type="text" />
+        <div class="add-task__row-wrapper">
+          <input id="new-task" class="add-task__input" type="text" />
           <button>Add</button>
         </div>
       </div>
       <h3>Todo</h3>
-      <ul id="incompleteTasks">
+      <ul id="incomplete-tasks">
         <li class="list-item">
           <input type="checkbox" />
           <label class="task">Pay Bills</label>
           <input type="text" class="task" />
-          <button class="edit">Edit</button>
-          <button class="delete">
+          <button class="list-item__edit">Edit</button>
+          <button class="list-item__delete">
             <img src="./remove.svg" alt="" />
           </button>
         </li>
@@ -39,8 +39,8 @@
           <input type="checkbox" />
           <label class="task">Go Shopping</label>
           <input type="text" value="Go Shopping" class="task" />
-          <button class="edit">Save</button>
-          <button class="delete">
+          <button class="list-item__edit">Save</button>
+          <button class="list-item__delete">
             <img src="./remove.svg" alt="" />
           </button>
         </li>
@@ -51,8 +51,8 @@
           <input type="checkbox" checked />
           <label class="task">See the Doctor</label>
           <input type="text" class="task" />
-          <button class="edit">Edit</button>
-          <button class="delete">
+          <button class="list-item__edit">Edit</button>
+          <button class="list-item__delete">
             <img src="./remove.svg" alt="" />
           </button>
         </li>
